[package]
name = "eosio_yield"
version = "0.1.0"
authors = ["Denis <denis@pinax.network>"]
description = "Metrics for Yield+"
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[badges]
maintenance = { status = "actively-developed" }

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = "1.0.91"
serde = { version = "1.0", features = ["derive"] }
prost = "0.11"
prost-types = "0.11"
antelope = "0.1.5"
substreams = "0.5"
substreams-sink-prometheus = "0.1.9"
substreams-antelope = { git = "https://github.com/pinax-network/substreams-antelope.git", branch = "feat/abigen" }

[build-dependencies]
substreams-antelope = { git = "https://github.com/pinax-network/substreams-antelope.git", branch = "feat/abigen" }
